[gd_scene load_steps=21 format=2]

[ext_resource path="res://scenes/variations/0/Var0.gd" type="Script" id=1]
[ext_resource path="res://assets/font/Montserrat-Regular.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://scenes/variations/0/IconoTienda.gd" type="Script" id=3]
[ext_resource path="res://scenes/variations/0/FirstPlace.gd" type="Script" id=4]

[sub_resource type="DynamicFont" id=1]
size = 27
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 2 )

[sub_resource type="RectangleShape2D" id=13]
extents = Vector2( 96, 32 )

[sub_resource type="StyleBoxFlat" id=15]
bg_color = Color( 0.701961, 0.701961, 0.701961, 0.333333 )

[sub_resource type="StyleBoxFlat" id=16]
bg_color = Color( 0.701961, 0.701961, 0.701961, 0.784314 )

[sub_resource type="Gradient" id=6]
offsets = PoolRealArray( 0.00645161, 1 )
colors = PoolColorArray( 0.90625, 0.635077, 0.251343, 1, 0.933594, 0.813005, 0.707489, 1 )

[sub_resource type="GradientTexture" id=5]
gradient = SubResource( 6 )
width = 150

[sub_resource type="StyleBoxFlat" id=14]
bg_color = Color( 1, 0.913725, 0.839216, 0.717647 )

[sub_resource type="DynamicFont" id=7]
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]
size = 24
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
extra_spacing_char = 2
font_data = ExtResource( 2 )

[sub_resource type="RectangleShape2D" id=17]
extents = Vector2( 88, 24 )

[sub_resource type="Gradient" id=8]
offsets = PoolRealArray( 0.00645161, 1 )
colors = PoolColorArray( 1, 0.60625, 0.261719, 1, 0.933594, 0.813005, 0.707489, 1 )

[sub_resource type="GradientTexture" id=9]
gradient = SubResource( 8 )
width = 150

[sub_resource type="GDScript" id=10]
script/source = "extends TextureRect

var dragPosition = null

func _ready():
	$Info.hide()

func _on_Tienda_gui_input(event):
	if event is InputEventMouseButton:
		if event.pressed:
			dragPosition = get_global_mouse_position() - rect_global_position
		else:
			dragPosition = null
	if event is InputEventMouseMotion and dragPosition:
		rect_global_position = get_global_mouse_position() - dragPosition


func _on_Tienda_mouse_entered():
	$Info.show()

func _on_Tienda_mouse_exited():
	$Info.hide()
"

[sub_resource type="Gradient" id=11]
offsets = PoolRealArray( 0.00645161, 1 )
colors = PoolColorArray( 1, 0.679688, 0, 1, 0.933594, 0.813005, 0.707489, 1 )

[sub_resource type="GradientTexture" id=12]
gradient = SubResource( 11 )
width = 150

[node name="Node2D" type="Node2D"]
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_left = 1.0
margin_right = 901.0
margin_bottom = 600.0
color = Color( 1, 0.913725, 0.839216, 1 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="InstructionLabel" type="Label" parent="."]
margin_left = 44.0
margin_top = 23.0
margin_right = 848.0
margin_bottom = 120.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.396078, 0.25098, 0.384314, 1 )
text = "Organice las Tiendas según qué tan confiables son 
(Pase el mouse por encima para ver descripción y arrastrelas para moverlas)"
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FinishedButton" type="Button" parent="."]
margin_left = 779.0
margin_top = 543.0
margin_right = 868.0
margin_bottom = 570.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0.980392, 0.584314, 0.47451, 1 )
text = "Realizado"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="1stPlace" type="Area2D" parent="."]
position = Vector2( 664, 208 )
script = ExtResource( 4 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="1stPlace"]
shape = SubResource( 13 )
__meta__ = {
"_edit_group_": true
}

[node name="Panel" type="Panel" parent="1stPlace"]
margin_left = -96.0
margin_top = -32.0
margin_right = 96.0
margin_bottom = 32.0
custom_styles/panel = SubResource( 15 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel2" type="Panel" parent="1stPlace"]
margin_left = -96.0
margin_top = -32.0
margin_right = 96.0
margin_bottom = 32.0
custom_styles/panel = SubResource( 16 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="1stPlace"]
margin_left = -96.0
margin_top = -32.0
margin_right = 96.0
margin_bottom = 32.0
text = "Primer Lugar
(Más confiable)"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="2stPlace" type="Area2D" parent="."]
position = Vector2( 664, 304 )
script = ExtResource( 4 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="2stPlace"]
shape = SubResource( 13 )
__meta__ = {
"_edit_group_": true
}

[node name="Panel" type="Panel" parent="2stPlace"]
margin_left = -96.0
margin_top = -32.0
margin_right = 96.0
margin_bottom = 32.0
custom_styles/panel = SubResource( 15 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel2" type="Panel" parent="2stPlace"]
margin_left = -96.0
margin_top = -32.0
margin_right = 96.0
margin_bottom = 32.0
custom_styles/panel = SubResource( 16 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="2stPlace"]
margin_left = -96.0
margin_top = -32.0
margin_right = 96.0
margin_bottom = 32.0
text = "Segundo Lugar"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="3stPlace" type="Area2D" parent="."]
position = Vector2( 664, 400 )
script = ExtResource( 4 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="3stPlace"]
shape = SubResource( 13 )
__meta__ = {
"_edit_group_": true
}

[node name="Panel" type="Panel" parent="3stPlace"]
margin_left = -96.0
margin_top = -32.0
margin_right = 96.0
margin_bottom = 32.0
custom_styles/panel = SubResource( 15 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel2" type="Panel" parent="3stPlace"]
margin_left = -96.0
margin_top = -32.0
margin_right = 96.0
margin_bottom = 32.0
custom_styles/panel = SubResource( 16 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="3stPlace"]
margin_left = -96.0
margin_top = -32.0
margin_right = 96.0
margin_bottom = 32.0
text = "Tercer Lugar
(Menos confiable)"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Shop1" type="TextureRect" parent="."]
margin_left = 176.0
margin_top = 200.0
margin_right = 351.0
margin_bottom = 248.0
texture = SubResource( 5 )
expand = true
flip_h = true
script = ExtResource( 3 )
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="Info" type="Label" parent="Shop1"]
margin_left = 192.0
margin_top = -32.0
margin_right = 600.0
margin_bottom = 133.0
custom_styles/normal = SubResource( 14 )
custom_fonts/font = SubResource( 7 )
custom_colors/font_color = Color( 0.407843, 0.407843, 0.407843, 1 )
text = "Reputación del vendedor: 2/5
Tiempo de trabajo desde apertura: 1 mes
Pago contraentrega: NO
Aseguramiento de compras: Solo superior a $100.000.
Seguridad en transacción con reembolso: NO
"
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="Shop1"]
margin_right = 175.0
margin_bottom = 48.0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Tienda 1"
align = 1
valign = 1
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AreaT1" type="Area2D" parent="Shop1"]
position = Vector2( 88, 24 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Shop1/AreaT1"]
shape = SubResource( 17 )
__meta__ = {
"_edit_group_": true
}

[node name="Shop2" type="TextureRect" parent="."]
margin_left = 176.0
margin_top = 272.0
margin_right = 351.0
margin_bottom = 320.0
texture = SubResource( 9 )
expand = true
flip_h = true
script = SubResource( 10 )
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="Info" type="Label" parent="Shop2"]
margin_left = 192.0
margin_top = -32.0
margin_right = 600.0
margin_bottom = 133.0
custom_styles/normal = SubResource( 14 )
custom_fonts/font = SubResource( 7 )
custom_colors/font_color = Color( 0.407843, 0.407843, 0.407843, 1 )
text = "Reputación del vendedor: 5/5
Tiempo de trabajo desde apertura: 10 años y 7 meses
Pago contraentrega: SI
Aseguramiento de compras: Siempre.
Seguridad en transacción con reembolso: SI.
"
valign = 1
autowrap = true

[node name="Title" type="Label" parent="Shop2"]
margin_right = 175.0
margin_bottom = 52.0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Tienda 2"
align = 1
valign = 1
uppercase = true

[node name="AreaT2" type="Area2D" parent="Shop2"]
position = Vector2( 88, 24 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Shop2/AreaT2"]
shape = SubResource( 17 )
__meta__ = {
"_edit_group_": true
}

[node name="Shop3" type="TextureRect" parent="."]
margin_left = 176.0
margin_top = 360.0
margin_right = 351.0
margin_bottom = 408.0
texture = SubResource( 12 )
expand = true
flip_h = true
script = ExtResource( 3 )
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="Info" type="Label" parent="Shop3"]
margin_left = 192.0
margin_top = -32.0
margin_right = 600.0
margin_bottom = 133.0
custom_styles/normal = SubResource( 14 )
custom_fonts/font = SubResource( 7 )
custom_colors/font_color = Color( 0.407843, 0.407843, 0.407843, 1 )
text = "Reputación del vendedor: 3/5
Tiempo de trabajo desde apertura:  2 años
Pago contraentrega: SI
Aseguramiento de compras: Solo superior a $50.000.
Seguridad en transacción con reembolso: SI
"
valign = 1
autowrap = true

[node name="Title" type="Label" parent="Shop3"]
margin_right = 175.0
margin_bottom = 52.0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Tienda 3"
align = 1
valign = 1
uppercase = true

[node name="AreaT3" type="Area2D" parent="Shop3"]
position = Vector2( 88, 24 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Shop3/AreaT3"]
shape = SubResource( 17 )
__meta__ = {
"_edit_group_": true
}
[connection signal="pressed" from="FinishedButton" to="." method="_on_FinishedButton_pressed"]
[connection signal="area_shape_entered" from="1stPlace" to="1stPlace" method="_on_FirstPlace_area_shape_entered"]
[connection signal="area_shape_exited" from="1stPlace" to="1stPlace" method="_on_FirstPlace_area_shape_exited"]
[connection signal="area_shape_entered" from="2stPlace" to="2stPlace" method="_on_FirstPlace_area_shape_entered"]
[connection signal="area_shape_exited" from="2stPlace" to="2stPlace" method="_on_FirstPlace_area_shape_exited"]
[connection signal="area_shape_entered" from="3stPlace" to="3stPlace" method="_on_FirstPlace_area_shape_entered"]
[connection signal="area_shape_exited" from="3stPlace" to="3stPlace" method="_on_FirstPlace_area_shape_exited"]
[connection signal="gui_input" from="Shop1" to="Shop1" method="_on_Tienda_gui_input"]
[connection signal="mouse_entered" from="Shop1" to="Shop1" method="_on_Tienda_mouse_entered"]
[connection signal="mouse_exited" from="Shop1" to="Shop1" method="_on_Tienda_mouse_exited"]
[connection signal="gui_input" from="Shop2" to="Shop2" method="_on_Tienda_gui_input"]
[connection signal="mouse_entered" from="Shop2" to="Shop2" method="_on_Tienda_mouse_entered"]
[connection signal="mouse_exited" from="Shop2" to="Shop2" method="_on_Tienda_mouse_exited"]
[connection signal="gui_input" from="Shop3" to="Shop3" method="_on_Tienda_gui_input"]
[connection signal="mouse_entered" from="Shop3" to="Shop3" method="_on_Tienda_mouse_entered"]
[connection signal="mouse_exited" from="Shop3" to="Shop3" method="_on_Tienda_mouse_exited"]
